# convention.ninja-rust

./: .gitignore  Cargo.toml
apps/api/: Cargo.toml  Dockerfile  compose.yaml
apps/api/src/: graphql.rs  lib.rs  main.rs
libs/database/: Cargo.toml
libs/domains/: Cargo.toml
libs/domains/src/: lib.rs  users.rs
libs/domains/src/users/: model.rs  mutations.rs  resolver.rs  service.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs
