[package]
name = "convention-ninja-domains"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.7", features = ["chrono", "dataloader"] }
sea-orm = { version = "0.11.2", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
rustflake = "0.1.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.25", features = ["serde"] }
convention-ninja-database = { path = "../database" }